intTests/test_parse_errors/parser005.log.good
Loading file "parser005.saw"
parser005.saw:2:5-2:15: Error: Syntax error: unexpected `rebindable'
Some legal inputs at this point:
   '('
   name
FAILED
